<resources>
    <string name="app_name">CameraXApp</string>
    <string name="compare_face">Compare Face</string>
    <string name="back">Return</string>
    <string name="save_face">Save Face</string>
    <string name="open_camera">Open Camera</string>
    <string name="input_pin">Authorise Image Saving</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="confirm">Confirm</string>
    <string name="hidden_message">Hidden Message</string>
</resources>