<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PinActivity">

    <EditText
        android:id="@+id/editTextNumberPin"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:maxLength="4"
        android:inputType="numberPassword"
        android:hint="@string/enter_pin"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumberPinConfirm"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="268dp"
        android:ems="10"
        android:hint="@string/confirm_pin"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:maxLength="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="90dp"
        android:text="@string/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPinConfirm" />
</androidx.constraintlayout.widget.ConstraintLayout>